--- a/index.css
+++ b/index.css
@@ -3,7 +3,11 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
-    background-color: rgb(0, 109, 109);
+}
+
+body {
+    background-color: rgb(24, 24, 24);
+
 }
 
 .container {
@@ -14,11 +18,13 @@
 
 #chat-container {
     display: flex;
-    align-items: flex-end;
+    justify-content: space-between;
+    flex-direction: column;
     width: 60%;
     height: 100vh;
-    background-color: rgb(24, 24, 24);
     padding: 0 10px;
+    position: absolute;
+    bottom: 0;
 }
 
 textarea {
@@ -28,16 +34,19 @@ textarea {
     border-radius: 10px;
     border: none;
     padding: 10px;
-    margin: 10px auto;
     height: 60px;
     width: 96%;
     font-size: 14px;
     resize: none;
 }
 
+#input-container {
+    display: flex;
+    margin: 0;
+    margin-bottom: 10px;
+}
 #send-button {
     height: 60px;
-    margin: 10px 0;
     padding: 10px 20px;
     border-radius: 10px;
     border: none;
@@ -45,6 +54,26 @@ textarea {
     background-color: grey;
 }
 
-textarea:focus {
-    border: none;
+#messages-container {
+    color: snow;
+    padding: 10px;
+    border-radius: 6px;
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+#messages {
+    list-style: none;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: 10px;
+    max-width: 60%;
+}
+p {
+    padding: 5px;
+    margin: 5px;
+    border: 1px solid white;
+    border-radius: 50px;
 }
