I am enabling and disabling the sendBtn based on whether the input field is empty or not. I have made the app so it doesn't allow to send empty data to the database as an extra step of precaution just in case somebody bypasses that disabled button from the dev-tools!

--- a/index.css
+++ b/index.css
@@ -40,16 +40,19 @@ textarea {
 
 #input-container {
     display: flex;
+    justify-content: center;
     gap: 2px;
     margin: 0;
     margin-bottom: 10px;
 }
-#send-button {
+#send-button,
+#remove-btn {
     padding: 10px 20px;
     border-radius: 10px;
     border: none;
     color: white;
     background-color: grey;
+    cursor: pointer;
 }
 
 #messages-container {
