--- a/index.css
+++ b/index.css
@@ -74,6 +74,14 @@ body {
     margin-right: 15px;
 }
 
+.sign-in-btn {
+    padding: 10px 15px;
+    background-color: rgb(0, 170, 113);
+    border-radius: 10px;
+    border: none;
+    color: white;
+}
+
 .enabledBtn {
     background: transparent;
     color: rgb(167, 13, 233);
