--- a/index.css
+++ b/index.css
@@ -31,6 +31,7 @@ body {
     background-color: rgb(68, 68, 68);
     border-radius: 25px;
     margin-bottom: 10px;
+    padding: 6px 0;
 }
 
 .input-container__elements {
@@ -47,6 +48,7 @@ body {
     white-space: pre-wrap;
     line-height: 20px;
     width: 100%;
+    align-self: center;
     outline: none;
     resize: none;
 }
